# AlgorithmsFinalProject

./: BacktrackingSolution.cpp  BacktrackingSolution.h  CMakeLists.txt  README.md  TrivialSolution.cpp  TrivialSolution.h  build.yaml  main.cpp
.github/workflows/: build.yaml
